# remoteAgent

./: .claude_settings.json  .env.example  .gitignore  LICENSE  Makefile  README.md  TESTING_REPORT.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
bot/: pyproject.toml
bot/agents/: example-project.yaml
bot/bot/: __main__.py  agent_registry.py  config.py  feishu_client.py  main.py  project_registry.py  rc_client.py  sdk_client.py  security.py  session_manager.py  stream_handler.py
bot/projects/: example-project.yaml
bot/tests/: test_agent_registry.py  test_config.py  test_feishu_client.py  test_git_sync.py  test_main.py  test_project_registry.py  test_sdk_client.py  test_security.py  test_session_manager.py  test_stream_handler.py
bots/coder/: pyproject.toml
bots/coder/src/coder/: __init__.py  __main__.py  config.py  git_sync.py  main.py  project_registry.py  security.py
bots/coder/tests/: test_coder_config.py  test_coder_main.py  test_git_sync.py  test_project_registry.py  test_sdk_client.py  test_security.py
bots/hr/: pyproject.toml
bots/hr/src/hr/: __init__.py  __main__.py  main.py
bots/hr/tests/: test_hr_main.py
core/: pyproject.toml
core/src/core/: __init__.py  config.py  feishu_client.py  session_manager.py  stream_handler.py
core/tests/: test_config.py  test_feishu_client.py  test_session_manager.py  test_stream_handler.py
