[project]
name = "remoteagent-coder"
version = "0.1.0"
description = "Claude Code coder bot for Feishu"
requires-python = ">=3.10"
dependencies = [
    "remoteagent-core",
    "claude-agent-sdk>=0.1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
